unpackaged/objects/ModificationRequest__c.object
<CustomObject>
    <fields>
        <fullName>Field5__c</fullName>
        <label>依頼者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field6__c</fullName>
        <label>変更者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field8__c</fullName>
        <label>契約地区</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KaiinArea__c</fullName>
        <formula>if( Kaiin__c &lt;&gt;&quot;&quot;,
CASE(Kaiin__r.CompanyKeiyakuNo__r.KeiyakuArea__c, 
&quot;北京&quot;,&quot;北京&quot;,
&quot;天津&quot;,&quot;天津&quot;,
&quot;大連&quot;,&quot;大連&quot;,
&quot;青島&quot;,&quot;青島&quot;,
&quot;上海&quot;,&quot;上海&quot;,
&quot;成都&quot;,&quot;成都&quot;,
&quot;武漢&quot;,&quot;武漢&quot;,
&quot;杭州&quot;,&quot;杭州&quot;,
&quot;寧波&quot;,&quot;寧波&quot;,
&quot;平湖&quot;,&quot;平湖&quot;,
&quot;蘇州&quot;,&quot;蘇州&quot;,
&quot;無錫&quot;,&quot;無錫&quot;,
&quot;昆山&quot;,&quot;昆山&quot;,
&quot;南通&quot;,&quot;南通&quot;,
&quot;常州&quot;,&quot;常州&quot;,
&quot;常熟&quot;,&quot;常熟&quot;,
&quot;深セン&quot;,&quot;深セン&quot;,
&quot;厦門&quot;,&quot;厦門&quot;,
&quot;東莞&quot;,&quot;東莞&quot;,
&quot;広州&quot;,&quot;広州&quot;,
&quot;中山&quot;,&quot;中山&quot;,
&quot;珠海&quot;,&quot;珠海&quot;,
&quot;香港&quot;,&quot;香港&quot;,
&quot;ハノイ&quot;,&quot;ハノイ&quot;,
&quot;東京&quot;,&quot;東京&quot;,
&quot;大阪&quot;,&quot;大阪&quot;,
&quot;名古屋&quot;,&quot;名古屋&quot;,
&quot;ニューデリー&quot;,&quot;ニューデリー&quot;,
&quot;&quot;) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員地区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kaiin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員氏名</label>
        <referenceTo>MemberInfo__c</referenceTo>
        <relationshipLabel>変更依頼</relationshipLabel>
        <relationshipName>R00N10000000bULLEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KazokuArea__c</fullName>
        <formula>if(  Kazoku__c  &lt;&gt;&quot;&quot;, 
CASE( Kazoku__r.MemberShimei__r.CompanyKeiyakuNo__r.KeiyakuArea__c , 
&quot;北京&quot;,&quot;北京&quot;, 
&quot;天津&quot;,&quot;天津&quot;, 
&quot;大連&quot;,&quot;大連&quot;, 
&quot;青島&quot;,&quot;青島&quot;, 
&quot;上海&quot;,&quot;上海&quot;, 
&quot;成都&quot;,&quot;成都&quot;, 
&quot;武漢&quot;,&quot;武漢&quot;, 
&quot;杭州&quot;,&quot;杭州&quot;, 
&quot;寧波&quot;,&quot;寧波&quot;, 
&quot;平湖&quot;,&quot;平湖&quot;, 
&quot;蘇州&quot;,&quot;蘇州&quot;, 
&quot;無錫&quot;,&quot;無錫&quot;, 
&quot;昆山&quot;,&quot;昆山&quot;, 
&quot;南通&quot;,&quot;南通&quot;, 
&quot;常州&quot;,&quot;常州&quot;, 
&quot;常熟&quot;,&quot;常熟&quot;, 
&quot;深セン&quot;,&quot;深セン&quot;, 
&quot;厦門&quot;,&quot;厦門&quot;, 
&quot;東莞&quot;,&quot;東莞&quot;, 
&quot;広州&quot;,&quot;広州&quot;, 
&quot;中山&quot;,&quot;中山&quot;, 
&quot;珠海&quot;,&quot;珠海&quot;, 
&quot;香港&quot;,&quot;香港&quot;, 
&quot;ハノイ&quot;,&quot;ハノイ&quot;, 
&quot;東京&quot;,&quot;東京&quot;, 
&quot;大阪&quot;,&quot;大阪&quot;, 
&quot;名古屋&quot;,&quot;名古屋&quot;, 
&quot;ニューデリー&quot;,&quot;ニューデリー&quot;, 
&quot;&quot;) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>家族地区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kazoku__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員（家族）情報</label>
        <referenceTo>FamilyInfo__c</referenceTo>
        <relationshipLabel>変更依頼</relationshipLabel>
        <relationshipName>R00N10000000bULQEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <formula>Kaiin__r.MemberNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModificationNote__c</fullName>
        <label>変更内容</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NaimuTanto__c</fullName>
        <formula>IF (  Kaiin__c &lt;&gt; &quot;&quot;,   Kaiin__r.KeiyakuCompanyName__r.NaimuTanto__r.Name  ,  Kazoku__r.MemberShimei__r.KeiyakuCompanyName__r.NaimuTanto__r.Name  )</formula>
        <label>内務担当</label>
        <type>Text</type>
    </fields>
    <label>変更依頼</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>X0</fullName>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>KaiinArea__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
        </filters>
        <label>0.契約地入力漏れ</label>
        <sharedTo>
            <roleAndSubordinates>AC</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x10</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>北京</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>10.北京</label>
    </listViews>
    <listViews>
        <fullName>x11</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>天津</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>11.天津</label>
    </listViews>
    <listViews>
        <fullName>x12</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>大連</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>12.大連</label>
    </listViews>
    <listViews>
        <fullName>x13</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>青島</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>13.青島</label>
    </listViews>
    <listViews>
        <fullName>x20</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>上海</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>20.上海</label>
    </listViews>
    <listViews>
        <fullName>x21</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>成都</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>21.成都</label>
    </listViews>
    <listViews>
        <fullName>x22</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>武漢</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>22.武漢</label>
    </listViews>
    <listViews>
        <fullName>x23</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>杭州</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>23.杭州</label>
    </listViews>
    <listViews>
        <fullName>x24</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>寧波</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>24.寧波</label>
    </listViews>
    <listViews>
        <fullName>x30</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>蘇州</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>30.蘇州</label>
    </listViews>
    <listViews>
        <fullName>x31</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>無錫</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>31.無錫</label>
    </listViews>
    <listViews>
        <fullName>x32</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>昆山</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>32.昆山</label>
    </listViews>
    <listViews>
        <fullName>x33</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Field8__c</columns>
        <columns>Kaiin__c</columns>
        <columns>Kazoku__c</columns>
        <columns>ModificationNote__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>南通</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Field6__c</field>
            <operation>equals</operation>
        </filters>
        <label>33.南通</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>変更依頼№</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MemberCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF (  AND(Kaiin__c &lt;&gt; &quot;&quot;, Kazoku__c  &lt;&gt; &quot;&quot;) , True,  False )</errorConditionFormula>
        <errorMessage>会員氏名もしくは、会員家族氏名のどちらか一方しか入力できません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Member_Check2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Kaiin__c   = &quot;&quot;, Kazoku__c  = &quot;&quot;)</errorConditionFormula>
        <errorMessage>会員氏名または家族氏名を入力してください</errorMessage>
    </validationRules>
</CustomObject>